--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,144 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <title>Simple Express Static Server</title>
-</head>
-<body>
-  Hello World
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<style>
+
+		</style>
+
+		<script>
+			/*
+			This method uses a couple different methods of instantiating the
+			XMLHttpRequest object. The reason we do this is so we can support
+			multiple browser (I've only tested in IE and Firefox).
+			*/
+			function getXMLHTTPRequest()
+			{
+				var request;
+
+				// Lets try using ActiveX to instantiate the XMLHttpRequest object
+				try{
+					request = new ActiveXObject("Microsoft.XMLHTTP");
+					}catch(ex1){
+					try{
+						request = new ActiveXObject("Msxml2.XMLHTTP");
+						}catch(ex2){
+						request = null;
+					}
+				}
+
+				// If the previous didn't work, lets check if the browser natively support XMLHttpRequest 
+				if(!request && typeof XMLHttpRequest != "undefined"){
+					//The browser does, so lets instantiate the object
+					request = new XMLHttpRequest();
+				}
+
+				return request;
+			}
+
+
+			function loadURL(url, callback)
+			{
+				var aXMLHttpRequest = getXMLHTTPRequest();
+				var allData;
+
+				if (aXMLHttpRequest){
+					aXMLHttpRequest.open("GET", url, true);
+					aXMLHttpRequest.onreadystatechange = function (aEvt) {
+						if(aXMLHttpRequest.readyState == 4){
+							allData = aXMLHttpRequest.responseText;
+							callback(allData)
+						}
+
+					};
+
+					//Lets fire off the request
+					aXMLHttpRequest.send(null);
+				}
+
+				else
+				{
+					//Oh no, the XMLHttpRequest object couldn't be instantiated.
+					alert("A problem occurred instantiating the XMLHttpRequest object.");
+				}
+			}
+
+
+			function addNew()
+			{
+				var newtodo = prompt("Enter new todo", "")
+				var url = "./addtodo?newtodo=" + encodeURIComponent(newtodo) + "&todoid=" + new Date().getTime().toString();;
+				var callback = function(data){
+					if(data === "added"){
+						updateList();
+					}
+				} 
+				loadURL(url, callback);   
+			}
+			
+			var inspectList;
+
+			function updateList()
+			{
+				var url = "./listtodos";	 
+				var callback = function(data){
+					var list = JSON.parse(data);
+					inspectList = list;
+					var output = "";
+					for(var i=0; i < list.length; i++){
+						output = output + "<p>" + list[i].newtodo + "</p>";
+						output = output + "<a href='javascript:deleteTodo(" + list[i].todoid.toString() + ")'>" + "Delete</a>";
+						output = output + "<hr>";
+					}
+					document.getElementById("list").innerHTML = output;
+				}  
+				loadURL(url, callback);   
+
+			}
+
+			function deleteTodo(index){
+				var url = "./deletetodo?index=" + encodeURIComponent(index);
+				var callback = function(data){
+					if(data === "deleted"){
+						updateList();
+					}
+				} 
+				loadURL(url, callback); 
+			}
+
+			function editTodo(index) {
+				var url = "./edittodo?index=" + encodeURIComponent(index);
+				
+				var newtodo = prompt("Edit  todo", "");
+
+				var callback = function(data){
+					if(data === "edited"){
+						updateList();
+					}
+					loadURL(url, callback);
+				}
+			}
+
+			//This loads the existing list items on page refresh/load
+			updateList();
+		</script>
+
+	</head>
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1> Todos </h1>
+					<a class="btn btn-success" href='javascript:addNew()'>Add new</a>
+					<hr>
+				</div>
+			</div>
+			<div class="row">
+				<div id="list" class="col-md-12">
+					list is empty
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
